<?xml version="1.0"?>
<package format="2">
  <name>kbot_msgs</name>
  <version>1.0.0</version>
  <description>
    rosmsg for kbot: low level publish
  </description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
